src/style.css
body {
  background-color: rgba(195, 195, 195, 0.75);
}

h1 {
  text-align: center;
  font-family: 'SF Mono', SFMono-Regular, ui-monospace,
  'DejaVu Sans Mono', Menlo, Consolas, monospace;}

h2 {
  text-align: center;
  font-family: 'SF Mono', SFMono-Regular, ui-monospace,
  'DejaVu Sans Mono', Menlo, Consolas, monospace;
}

h3 {
  font-family: "sans-serif";
}

p {
  text-align: justify;
  text-indent: 2em;
  font-family: "sans-serif";
  font-size: 14pt;
}

.reference_source {
  font-style: italic;
}

a {
  font-weight: bold;
  text-decoration: none;
}

a:link {
  color: cornflowerblue;
}

a:visited {
  color: cornflowerblue;
}

a:hover {
  color: color-mix(in srgb, cornflowerblue, black 30%);
}

a:active {
  color: color-mix(in srgb, cornflowerblue, black 30%);
}

canvas {
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  min-height: 100%;
  margin: 0;

  opacity: 33%;
 }

.bg {
  position: relative;
  margin: 50px auto auto auto;
  width: 100%;
  max-width: 1000px;
  min-height: min-content;
  height: auto;
  backdrop-filter: blur(5px);
  background-color:rgba(255, 255, 255, 0.8);
  box-shadow: rgba(0, 0, 0, 0.2) 0 0 20px;

  border-radius: 10px;
  box-sizing: border-box;
  padding: 20px 5% 20px 5%;
}

.bio_container {
  padding: 0;
  margin: 0;

  display: flex;
  flex-flow: row wrap-reverse;
}

.bio {
  padding: 5px;
  width: 0;
  flex-grow: 2;
}

.portrait {
  padding: 30px;
  width: 0;
  flex-grow: 1;
}

img {
  border-radius: 10px;
  height: 100%;
  width: 100%;
  object-fit: contain;
}

hr {
  border: none;
  height: 3px;
  background-color: grey;
  margin: auto 50px auto 50px;
}

.foot_rule {
  height: 1px;
  background-color: grey;
  margin-left: auto;
  margin-right: 67%;
}

